add select and get test
